syntax = "proto3";

option go_package = "./pb";

package pb;


//req „ÄÅresp
message GetUserInfoReq {
  string id = 1;
}
message GetUserInfoResp {
  string id = 1;
  string nickname = 2;
} 


//service
service usercenter {
  rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoResp) ; 
}

